--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,19 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 3cm;
+ color: rgba(242, 242, 242, 0.8);
+
+}
+h2{
+  text-align: center;
+  font-size: xx-large;
 }
 
 label {
   display: block;
+  font-size: x-large;
+  font-style: oblique;
   margin-bottom: 10px;
 }
 
@@ -50,5 +59,6 @@ button[type="submit"] {
   text-decoration: underline;
   cursor: pointer;
 }
+
 
 
